[EFL] Invalidation request for outside of visible area doesn't seem to occur when tiled view is used. https://bugs.webkit.org/show_bug.cgi?id=70873

Patch by KwangHyuk Kim <hyuki.kim@samsung.com> on 2011-12-22
Reviewed by Anders Carlsson.

In order to guarantee the paint outside of viewport when ewk_view_tiled is used,
ewk_frame_paint_full_set should be called by ewk_frame_view_create_for_view
when frame is created because frame view can be created newly as soon as page is created.
But for the ewk_view_single, as it doesn't need to paint outside of viewport,
ewk_frame_paint_full_set must not be called for ewk_view_single.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::transitionToCommittedForNewPage):
* ewk/ewk_private.h:
* ewk/ewk_view.cpp:
(ewk_view_frame_view_creation_notify):
* ewk/ewk_view_tiled.cpp:
(_ewk_view_tiled_smart_add):
(ewk_view_tiled_smart_set):

Canonical link: https://commits.webkit.org/91832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103520 268f45cc-cd09-0410-ab3c-d52691b4dbfc